--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#home_section">{Coder}</a>
+      <a class="navbar-brand" href="#home_section">{Coder 1}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="#home_section">Home</a></li>
-        <li><a href="#about_section">About</a></li>
-        <li><a href="#service_section">Service</a></li>
+        <li><a href="#about_section">About Us</a></li>
+        <li><a href="#service_section">Our Service</a></li>
         <li><a href="#download_section">Download</a></li>
-        <li><a href="#contact_section">Contact</a></li>
+        <li><a href="#contact_section">Contact Us</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
