Change the resolution and updated the readme

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                   </font>
                                   is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to mak
                                   <hr>
-                                  All our service is all at affordable prices. We are sure a trial will convince you to work with us
+                                  All our service are all at affordable prices. We are sure a trial will convince you to work with us
                                   <hr>
                                   <a href="#">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
